# chordii

./: .gitattributes  .gitignore  AUTHORS  INSTALL.WINDOWS  INSTALL.first  MANIFEST  Makefile  Makefile.am  NEWS  README  TODO  chordie.c  chordie.h  chordie.spec.in  chordii.spec.in  clean_all  configure.ac  grid.c  iso.c
contrib/: README
contrib/make/: Makefile
contrib/rpm/: chordie.spec  chordie.spec.in
contrib/vim/: README
debian/: changelog  control  copyright  rules
man/: Makefile.am  a2crd.1  a2crd.man  chordie.man  chordii.1
songs/: space-oddity.crd
src/: Makefile.am  a2crd.c  chordie.c  chordie.h  chordii.c  chordii.h  common.c  grid.c  iso.c  patchlevel.h  patchlevel.h.in  toc.c  xpose.c
src/test/: above.sh  below.sh  passthrough.sh
src/test/data/: above.expected  above.input  below.expected  below.input  passthrough.expected
windows/: .gitattributes  config.h
